<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">

    <group>
        <item
            android:id="@+id/profile_drawer"
            android:icon="@drawable/vector_profile"
            android:title="@string/profile_draw"/>
        <item
            android:id="@+id/settings_drawer"
            android:icon="@drawable/ic_outline_settings"
            android:title="@string/app_settings_draw"/>
    </group>

    <item android:title="@string/nav_support">
        <menu>
            <item
                android:id="@+id/help"
                android:icon="@drawable/ic_baseline_help_24"
                android:title="@string/help_draw"/>

            <item
                android:id="@+id/about"
                android:icon="@drawable/ic_about"
                android:title="@string/about_draw"/>

            <item
                android:id="@+id/contact"
                android:icon="@drawable/ic_contact_us"
                android:title="@string/contact_us_draw"/>
        </menu>
    </item>

    <item
        android:id="@+id/logout_drawer"
        android:icon="@drawable/vector_exit"
        android:title="@string/logout_draw"/>
</menu>