<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/bottom_sheet_background"
    android:id="@+id/bottomSheetMyPostMenu"
    android:paddingHorizontal="20dp">

    <LinearLayout
        android:id="@+id/layout_post_actions"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">
        <TextView
            android:id="@+id/title"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:padding="10dp"
            android:text="@string/actions"
            android:textColor="@color/color_bottom_sheet_text"
            android:textSize="18sp"
            android:textStyle="bold"
            />

        <View
            android:layout_width="match_parent"
            android:layout_height="1dp"
            android:layout_marginBottom="4dp"
            android:background="@color/gray"/>

        <Button
            android:id="@+id/btn_edit_post"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:drawableStart="@drawable/ic_baseline_edit_24"
            android:text="@string/edit_post"/>

        <Button
            android:id="@+id/btn_delete_post"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:drawableStart="@drawable/ic_baseline_delete_24"
            android:text="@string/delete_post"/>

    </LinearLayout>

    <LinearLayout
        android:id="@+id/layout_edit_post_comment"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:orientation="vertical"
        android:visibility="invisible"

        >

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/edit_post_comment"
            android:layout_gravity="center"
            android:textColor="@color/color_bottom_sheet_text"
            android:textSize="18sp"
            android:textStyle="bold"
            android:layout_marginTop="20dp"/>


        <EditText
            android:id="@+id/et_comment"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="20dp"
            android:hint="@string/comments"
            android:maxLines="5"
            android:paddingLeft="5dp" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            >

            <Button
                android:id="@+id/btn_cancel"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="@string/cancel"
                style="@style/btnEmptyStyle"
                android:textSize="18sp"
                android:layout_marginBottom="20dp"/>

            <Button
                android:id="@+id/btn_submit"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="@string/submit"
                style="@style/btnStylePrimary"
                android:textSize="18sp"
                android:layout_marginBottom="20dp"/>
        </LinearLayout>



    </LinearLayout>


</LinearLayout>