<?xml version="1.0" encoding="utf-8"?>

<androidx.core.widget.NestedScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:gravity="center_horizontal"
    tools:context=".Fragments.SignUpFragment"
    >

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        android:gravity="center_horizontal"
        android:padding="10dp"
        tools:context=".Fragments.SignUpFragment">


        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/create_an_account"
            android:textColor="@color/black"
            android:textSize="30sp"/>

        <TextView
            android:id="@+id/registerAlert"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textColor="@color/purple_200"/>


        <com.google.android.material.textfield.TextInputLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:counterEnabled="true"
            app:counterMaxLength="30"
            >
            <EditText
                android:id="@+id/editText_firstName"
                android:layout_width="match_parent"
                android:layout_height="55dp"
                android:layout_marginStart="10dp"
                android:layout_marginEnd="10dp"
                android:layout_marginTop="20dp"
                android:hint="@string/first_name_hint"
                android:paddingLeft="5dp"
                />
        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.textfield.TextInputLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:counterEnabled="true"
            app:counterMaxLength="30"
            >
            <EditText
                android:id="@+id/editText_lastName"
                android:layout_width="match_parent"
                android:layout_height="55dp"
                android:layout_marginStart="10dp"
                android:layout_marginEnd="10dp"
                android:hint="@string/last_name_hint"
                android:paddingLeft="5dp"
                />
        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.textfield.TextInputLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">
            <EditText
                android:id="@+id/editText_email"
                android:layout_width="match_parent"
                android:layout_height="55dp"
                android:layout_marginStart="10dp"
                android:layout_marginEnd="10dp"
                android:hint="@string/email_or_phone_number"
                android:paddingLeft="5dp"
                />
        </com.google.android.material.textfield.TextInputLayout>



        <com.google.android.material.textfield.TextInputLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:passwordToggleEnabled="true">

            <EditText
                android:id="@+id/editText_password"
                android:layout_width="match_parent"
                android:layout_height="55dp"
                android:hint="@string/password_hint"
                android:paddingLeft="5dp"
                android:inputType="textPassword"
                android:layout_margin="10dp"
                />
        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.textfield.TextInputLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:passwordToggleEnabled="true">

            <EditText
                android:id="@+id/editText_confirm_password"
                android:layout_width="match_parent"
                android:layout_height="55dp"
                android:hint="@string/confirm_password_hint"
                android:paddingLeft="5dp"
                android:inputType="textPassword"
                android:layout_margin="10dp"
                />
        </com.google.android.material.textfield.TextInputLayout>


        <Button
            android:id="@+id/btn_sign_up"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="10dp"
            android:textSize="22sp"
            android:textStyle="bold"
            android:text="@string/sign_up"
            style="@style/btnStylePrimary"
            />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/or"/>

        <TextView
            android:id="@+id/textView_go_to_sign_in"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/already_have_an_account_sign_in"
            android:layout_margin="10dp"
            android:textStyle="bold"
            android:textSize="20sp"
            android:padding="10dp"
            style="@style/btnAlertStyle"
            />

    </LinearLayout>


</androidx.core.widget.NestedScrollView>

