<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:gravity="center_horizontal"
    android:padding="10dp"
    tools:context=".Fragments.SignInFragment"
    >

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/sign_in"
        android:textSize="30sp"
        android:textColor="@color/black"
        />

    <TextView
        android:id="@+id/loginAlert"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textColor="@color/purple_200"
        android:layout_marginTop="30dp"
        android:layout_marginBottom="50dp"/>

    <com.google.android.material.textfield.TextInputLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        >
        <EditText
            android:id="@+id/editText_email"
            android:layout_width="match_parent"
            android:layout_height="55dp"
            android:layout_marginStart="10dp"
            android:layout_marginEnd="10dp"
            android:layout_marginTop="50dp"
            android:hint="@string/email_or_phone_number"
            android:paddingLeft="5dp"
            android:text="admin"/>
    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.textfield.TextInputLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:passwordToggleEnabled="true"
        >
        <EditText
            android:id="@+id/editText_password"
            android:layout_width="match_parent"
            android:layout_height="55dp"
            android:hint="@string/password_hint"
            android:paddingLeft="5dp"
            android:inputType="textPassword"
            android:layout_margin="10dp"
            android:text="admin"/>
    </com.google.android.material.textfield.TextInputLayout>

    <Button
        android:id="@+id/btn_sign_in"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="10dp"
        android:textSize="22sp"
        android:textStyle="bold"
        android:text="@string/sign_in"
        style="@style/btnStyleSecondary"
        />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/or"/>

    <TextView
        android:id="@+id/textView_go_to_sign_up"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/don_t_have_an_account_create_now"
        android:layout_margin="10dp"
        android:textStyle="bold"
        android:textSize="20sp"
        android:padding="5dp"
        style="@style/btnAlertStyle"
        />

</LinearLayout>