<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".SearchActivity">

    <androidx.appcompat.widget.Toolbar
        android:id="@+id/toolbar"
        android:layout_width="match_parent"
        android:layout_height="?attr/actionBarSize"
        >

        <androidx.appcompat.widget.SearchView
            android:id="@+id/searchView"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:queryHint="@string/tap_to_search"
            />

    </androidx.appcompat.widget.Toolbar>

    <Button
        android:id="@+id/random_people"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/random_people"
        style="@style/btnEmptyStyle"
        android:layout_marginBottom="5dp"
        android:layout_marginHorizontal="10dp"/>
    <ProgressBar
        android:id="@+id/progress"
        android:layout_width="wrap_content"
        android:layout_height="0dp"
        android:visibility="invisible"
        android:layout_gravity="center"/>

    <androidx.recyclerview.widget.RecyclerView
        android:id="@+id/recycler_search_people_result"
        android:layout_margin="5dp"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"/>

    <TextView
        android:id="@+id/tv_search_alert"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/zero_search_result"
        android:layout_gravity="center_horizontal"
        android:visibility="invisible"
        />

</LinearLayout>