<?xml version="1.0" encoding="utf-8"?>



<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".PostImageActivity"
    >

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        >

        <TextView
            android:id="@+id/tv_title"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:textSize="18sp"/>

        <ImageView
            android:id="@+id/iv_image_to_upload"
            android:layout_width="wrap_content"
            android:layout_height="200dp"
            android:layout_margin="10dp"
            android:scaleType="fitCenter"
            android:layout_gravity="center_horizontal"
            android:src="@drawable/placeholder_image"/>

            <Button
                android:id="@+id/btn_pick_image"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="10dp"
                android:text="@string/pick_image"
                android:drawableTop="@drawable/ic_camera"
                android:layout_gravity="center_horizontal"
                />



        <EditText
            android:id="@+id/poster_comment"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="20dp"
            android:layout_marginBottom="20dp"
            android:layout_marginEnd="10dp"
            android:layout_marginStart="10dp"
            android:hint="@string/enter_a_comment"
            android:maxLines="5"
            />

        <ProgressBar
            android:id="@+id/progressBar"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:visibility="invisible"
            android:layout_gravity="center"/>

        <Button
            android:id="@+id/btn_upload_image"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/upload"
            android:drawableTop="@drawable/ic_upload"
            android:layout_gravity="center_horizontal"
            android:layout_marginTop="100dp"
            android:enabled="false"
            style="@style/btnAlertStyle"
            />




    </LinearLayout>

</ScrollView>
